tests/expectations/compiler/finalize/finalize_returns_value_fail.out
Error [ETYC0372106]: A final fn is not allowed to return a value.
    --> compiler-test:8:1
     |
   8 | final fn finalize_public_adder(a: u8, b: u8) -> public u8 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   9 |     return a + b;
     |     ^^^^^^^^^^^^^
  10 | }
     | ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the Final returned by final fn is automatically inferred, and must not be explicitly written.
